    - fixed bug in Script::SetGroup: the script chunk wasn't moved
    - fixed compilation error with clang 3.4
    - GIG FORMAT EXTENSION: added support for saving gig file larger than 4 GB
      as one single monolithic gig file. In case .gig file is >= 2GB expect a
      large monolithic file, otherwise if .gig file is < 2 GB check for
      "extension" files (.gx01, .gx02, ...) instead.

  * src/DLS.cpp, src/DLS.h:
    - Sample: wave pool offsets are now 64 bits (to allow support for files
      larger than 4 GB).
      
  * src/RIFF.cpp, src/RIFF.h:
    - added support for RIFF files larger than 4 GB, by default the required
      internal RIFF file offset size is automatically detected (that is RIFF
      files < 4 GB automatically use 32 bit offsets while files >= 4 GB
      automatically use 64 bit offsets), a particular offset size can be forced
      with a new option added to the RIFF File constructor though
    - when saving a modified, grown RIFF file, the temporary file size during
      Save() operation will no longer be larger than the final grown file size

  * src/tools/akaidump.cpp, src/tools/akaiextract.cpp:
    - improved output of non-ascii characters in usage messages
    - fixed printf format strings

  * src/tools/korg2gig.cpp:
    - fixed c++11 narrowing warnings
    - fixed fine tuning which was not translated at all

  * packaging changes:
    - Automake: set environment variable GCC_COLORS=auto to allow GCC to
      auto detect whether it (sh/c)ould output its messages in color.

Version 4.0.0 (14 Jul 2015)
  * general changes:
    - minor Makefile fix for parallel make
    - Mac OS X: link with CoreFoundation (for the UUID function)
    - removed gcc 4.7 warnings
    - modernized configure script
    - removed usage of deprecated Automake variable INCLUDES
    - added new command line tool "gigmerge"
    - added "const" keyword to several methods
    - added new command line tool "gig2mono"
    - added man page for "sf2dump"